syntax = "proto3";

package input;

option go_package = "./message";

message Input {
  string user_id = 1;

  oneof kind {
    Init init = 2;
    Move move = 3;
    Lobby lobby = 4;
    Room room = 5;
    UserStates user_states = 6;
    ServerState server_state = 8;   
  }

  int64 context = 9;
  int64 prev_context = 10;
}

message Move {
  enum Direction {
    DIRECTION_UNSPECIFIED = 0;
    UP = 1;
    DOWN = 2;
    LEFT = 3;
    RIGHT = 4;
  }

  Direction direction = 1;
}

message Init {}

message ServerState {}

message RoomState {
  string room_name = 1;
  int32 max_users = 2;
  repeated string user_ids = 3;
}

message Lobby {
  enum LobbyType {
    LOBBY_UNSPECIFIED = 0;
    CREATE = 1;
    JOIN = 2;
    STATE = 3;
  }

  LobbyType type = 1;
  string room_name = 2;
  int32 max_users = 3;
  repeated RoomState room_states = 4;
}

message Room {
  enum RoomType {
    ROOM_UNSPECIFIED = 0;
    QUIT = 1;
    START = 2;
    STATE = 3;
  }

  RoomType type = 1;
  string room_name = 2;
  int32 max_users = 3;
  RoomState room_state = 4;
}

message UserStates {
  message Position {
    int32 x = 1;
    int32 y = 2;
  }

  message UserState {
    Position position = 1;
    int32 score = 2;
  }

  repeated UserState user_states = 1;
}






